--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          file: ./apps/${{ matrixc.app }}//Dockerfile
+          file: ./apps/${{ matrix.app }}//Dockerfile
           context: .
           push: true
           tags: |
