--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@plugin-web-update-notification/vite": "1.7.1",
     "@urql/vue": "1.3.2",
     "@vueuse/core": "10.11.0",
     "add": "2.0.6",
