--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,8 +51,16 @@ services:
 
   mediamtx:
     image: bluenviron/mediamtx:latest-ffmpeg
-    network_mode: host
     restart: always
+    networks:
+      - caddy
+    ports:
+      - "8554:8554"
+      - "1935:1935"
+      - "8888:8888"
+      - "8889:8889"
+      - "8890:8890/udp"
+      - "8189:8189/udp"
     volumes:
       - ./mediamtx.yml:/mediamtx.yml
 
