--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -29,7 +29,8 @@
     "tailwindcss-animate": "1.0.7",
     "textarea-caret": "3.1.0",
     "vue": "3.4.29",
-    "vue-router": "4.3.3"
+    "vue-router": "4.3.3",
+    "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
