--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,8 @@
     "bradlc.vscode-tailwindcss",
     "vue.volar",
     "golang.go",
-		"GraphQL.vscode-graphql-syntax",
-		"GraphQL.vscode-graphql"
+    "GraphQL.vscode-graphql-syntax",
+    "GraphQL.vscode-graphql",
+    "esbenp.prettier-vscode"
   ]
 }
