--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,14 +8,14 @@
     "build": "pnpm codegen && vue-tsc && vite build",
     "preview": "vite preview",
     "shadcn": "shadcn-vue",
-    "codegen": "graphql-codegen"
+    "codegen": "graphql-codegen",
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@plugin-web-update-notification/vite": "1.7.1",
     "@urql/vue": "1.3.2",
     "@vueuse/components": "10.11.0",
     "@vueuse/core": "10.11.0",
-    "add": "2.0.6",
     "autoprefixer": "10.4.19",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
@@ -33,11 +33,14 @@
     "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "devDependencies": {
+    "@crashmax/prettier-config": "5.0.2",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.3.0",
     "@graphql-typed-document-node/core": "3.2.0",
     "@types/node": "20.14.7",
     "@vitejs/plugin-vue": "5.0.5",
+    "add": "2.0.6",
+    "pnpm": "9.4.0",
     "shadcn-vue": "0.10.5",
     "typescript": "5.5.2",
     "vite": "5.3.1",
