--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.19",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
+    "date-fns": "3.6.0",
     "floating-vue": "5.2.2",
     "graphql": "16.8.2",
     "graphql-ws": "5.16.0",
