--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,10 @@ services:
 
   redis:
     image: redis:latest
+    command: redis-server --appendonly yes
     restart: always
+    volumes:
+      - redis:/data
 
   postgres:
     image: postgres:16
@@ -66,6 +69,7 @@ services:
 
 volumes:
     postgres:
+    redis:
 
 networks:
   caddy:
