feat(frontend): use own player

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@eyevinn/webrtc-player": "0.13.0",
     "@plugin-web-update-notification/vite": "1.7.1",
     "@urql/vue": "1.3.2",
     "@vueuse/components": "10.11.0",
