chore(frontend): add prettier dependency
[skip ci]

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -39,10 +39,12 @@
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.3.0",
     "@graphql-typed-document-node/core": "3.2.0",
+    "@ianvs/prettier-plugin-sort-imports": "4.2.1",
     "@types/node": "20.14.7",
     "@vitejs/plugin-vue": "5.0.5",
     "add": "2.0.6",
     "pnpm": "9.4.0",
+    "prettier": "3.3.2",
     "shadcn-vue": "0.10.5",
     "typescript": "5.5.2",
     "vite": "5.3.1",
