chore(frontend): add env for set stream url
[skip ci]

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -45,3 +45,5 @@ jobs:
             ${{ env.DOCKER_IMAGE }}:${{ matrix.app }}-latest
             ${{ env.DOCKER_IMAGE }}:${{ matrix.app }}-${{ github.sha }}
           builder: ${{ steps.buildx.outputs.name }}
+          build-args: |
+            VITE_STREAM_URL=https://streamx.satont.dev/stream/
