--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=http://localhost:1337/auth/github/callback
 
+NATS_URL=nats://localhost:8223
+
 POSTGRES_URL=postgres://stream:stream@localhost:8832/stream
 REDIS_URL=redis://localhost:8879
 
