--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,6 +24,7 @@
     "floating-vue": "5.2.2",
     "graphql": "16.8.2",
     "graphql-ws": "5.16.0",
+    "hls.js": "1.5.11",
     "lucide-vue-next": "0.395.0",
     "radix-vue": "1.8.4",
     "tailwind-merge": "2.3.0",
