--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ TWITCH_REDIRECT_URI=http://localhost:1337/auth/twitch/callback
 
 SEVEN_TV_EMOTE_SET_ID=667518f1d0867ffc9364732f
 
-STREAM_PATH_INFO_ADDR=http://localhost:9997/v3/paths/get/mystream
+MEDIA_MTX_ADDR=http://localhost
+#STREAM_PATH_INFO_ADDR=http://localhost:9997/v3/paths/get/mystream
 
 # unnecessary to change
 GITHUB_CLIENT_ID=
