--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "@eyevinn/webrtc-player": "0.13.0",
     "@plugin-web-update-notification/vite": "1.7.1",
     "@urql/vue": "1.3.2",
+    "@videojs-player/vue": "1.0.0",
     "@vueuse/components": "10.11.0",
     "@vueuse/core": "10.11.0",
     "autoprefixer": "10.4.19",
@@ -31,6 +32,7 @@
     "tailwindcss": "3.4.4",
     "tailwindcss-animate": "1.0.7",
     "textarea-caret": "3.1.0",
+    "video.js": "8.12.0",
     "vue": "3.4.29",
     "vue-router": "4.3.3",
     "vue-virtual-scroller": "2.0.0-beta.8"
