feat: add ability to handle multichannel stream (#4)
* feat: add ability to handle multichannel stream

* kruto

--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,15 @@ TWITCH_REDIRECT_URI=http://localhost:1337/auth/twitch/callback
 
 SEVEN_TV_EMOTE_SET_ID=667518f1d0867ffc9364732f
 
-STREAM_PATH_INFO_ADDR=http://localhost:9997/v3/paths/get/mystream
+MEDIA_MTX_ADDR=http://localhost
+#STREAM_PATH_INFO_ADDR=http://localhost:9997/v3/paths/get/mystream
 
 # unnecessary to change
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=http://localhost:1337/auth/github/callback
+
+NATS_URL=nats://localhost:8223
 
 POSTGRES_URL=postgres://stream:stream@localhost:8832/stream
 REDIS_URL=redis://localhost:8879
