feat: add thumbnails

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,7 @@ services:
     network_mode: host
     volumes:
       - ./mediamtx.dev.yml:/mediamtx.yml
+      - ./thumbnails:/thumbnails
 
   redis:
     image: redis:latest
