--- a/mediamtx.dev.yml
+++ b/mediamtx.dev.yml
@@ -35,6 +35,10 @@ hlsPartDuration: 500ms
 
 paths:
   "~^(.+)$":
+    runOnReady: sh -c 'while true; do ffmpeg -i rtsp://localhost:$RTSP_PORT/$RTSP_PATH -vframes 1 -y /thumbnails/$G1.jpg; sleep 10; done'
+    runOnReadyRestart: yes
+    runOnNotReady: rm -f /thumbnails/$G1.jpg
+
 #    runOnReady: ffmpeg -re -stream_loop -1 -i file.ts -c copy -f rtsp rtsp://localhost:$RTSP_PORT/$G1
 #    runOnInitRestart: yes
 #  mystream:
