--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@ TWITCH_REDIRECT_URI=http://localhost:1337/auth/twitch/callback
 
 SEVEN_TV_EMOTE_SET_ID=667518f1d0867ffc9364732f
 
-MEDIA_MTX_ADDR=http://localhost
-#STREAM_PATH_INFO_ADDR=http://localhost:9997/v3/paths/get/mystream
-
 # unnecessary to change
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=http://localhost:1337/auth/github/callback
+
+THUMBNAILS_URI=http://localhost:1337/streams/thumbnails
+MEDIA_MTX_ADDR=http://localhost
 
 NATS_URL=nats://localhost:8223
 
