--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    volumes:
+      - ./thumbnails:/thumbnails
     labels:
       caddy: streamx.satont.dev
       caddy.handle_path: /api/*
@@ -60,6 +62,7 @@ services:
     network_mode: host
     volumes:
       - ./mediamtx.yml:/mediamtx.yml
+      - ./thumbnails:/thumbnails
 
   nats:
     image: nats:2.10.11-scratch
