--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,6 +37,7 @@
     "vite-svg-loader": "5.1.0",
     "vue": "3.4.29",
     "vue-router": "4.3.3",
+    "vue-sonner": "1.1.3",
     "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "devDependencies": {
