feat(frontend): replace player to vidstack

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,10 +12,8 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
-    "@eyevinn/webrtc-player": "0.13.0",
     "@plugin-web-update-notification/vite": "1.7.1",
     "@urql/vue": "1.3.2",
-    "@videojs-player/vue": "1.0.0",
     "@vueuse/components": "10.11.0",
     "@vueuse/core": "10.11.0",
     "autoprefixer": "10.4.19",
@@ -32,8 +30,7 @@
     "tailwindcss": "3.4.4",
     "tailwindcss-animate": "1.0.7",
     "textarea-caret": "3.1.0",
-    "video.js": "8.12.0",
-    "videojs-persist": "0.2.0",
+    "vidstack": "1.11.24",
     "vite-svg-loader": "5.1.0",
     "vue": "3.4.29",
     "vue-router": "4.3.3",
@@ -48,8 +45,6 @@
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
     "@types/node": "20.14.7",
     "@vitejs/plugin-vue": "5.0.5",
-    "add": "2.0.6",
-    "pnpm": "9.4.0",
     "prettier": "3.3.2",
     "shadcn-vue": "0.10.5",
     "typescript": "5.5.2",
