--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "allowJs": true
+    "allowJs": true,
+    "types": ["vidstack/vue"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
