--- a/apps/frontend/.vscode/extensions.json
+++ b/apps/frontend/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["Vue.volar"]
+  "recommendations": [
+    "Vue.volar",
+    "arcanis.vscode-zipfs",
+    "esbenp.prettier-vscode"
+  ]
 }
