--- a/.github/workflows/build-and-push-mediamtx.yml
+++ b/.github/workflows/build-and-push-mediamtx.yml
@@ -1,8 +1,6 @@
-name: Push mediamtx
+name: Build and push mediamtx
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
 
 env:
@@ -14,13 +12,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-          app: [frontend, api]
     steps:
-      - name: Set DOCKER_IMAGE env
-        run: |
-          echo "DOCKER_IMAGE=$DOCKER_REGISTRY/satont/livestreamx" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -38,12 +30,12 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          file: ./apps/${{ matrix.app }}//Dockerfile
+          file: ./mediamtx.Dockerfile
           context: .
           push: true
           tags: |
-            ${{ env.DOCKER_IMAGE }}:${{ matrix.app }}-latest
-            ${{ env.DOCKER_IMAGE }}:${{ matrix.app }}-${{ github.sha }}
+            ghcr.io/satont/livestreamx:mediamtx-latest
+            ghcr.io/satont/livestreamx:mediamtx-${{ github.sha }}
           builder: ${{ steps.buildx.outputs.name }}
-          build-args: |
-            VITE_STREAM_URL=https://streamx.satont.dev/stream/
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
