feat(api): add feature flag for disable quality choose

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ TWITCH_SECRET=
 TWITCH_REDIRECT_URI=http://localhost:1337/auth/twitch/callback
 
 # unnecessary to change
+FEATURE_DISABLE_QUALITY=false
+
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REDIRECT_URI=http://localhost:1337/auth/github/callback
