fix(frontend): add missed codegen

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "pnpm codegen && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "prepare": "nuxt prepare",
-    "ui-thing": "ui-thing"
+    "ui-thing": "ui-thing",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
     "@internationalized/number": "3.5.3",
