--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@internationalized/number": "3.5.3",
     "@nuxt-alt/proxy": "2.5.8",
+    "@nuxt/fonts": "0.7.1",
+    "@nuxt/image": "1.7.0",
     "@urql/vue": "1.3.2",
     "@vueuse/components": "10.11.0",
     "date-fns": "3.6.0",
