fix(frontend): layout shift for profile

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,7 +24,7 @@
     "graphql-ws": "5.16.0",
     "hls.js": "1.5.13",
     "nuxt": "^3.12.4",
-    "radix-vue": "1.9.1",
+    "radix-vue": "1.9.2",
     "tailwind-variants": "0.2.1",
     "ui-thing": "0.1.22",
     "vidstack": "1.11.29",
@@ -40,9 +40,10 @@
     "@graphql-typed-document-node/core": "3.2.0",
     "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@iconify-json/lucide": "1.1.200",
-    "@nuxt/icon": "1.2.0",
+    "@nuxt/icon": "1.2.1",
     "@nuxtjs/color-mode": "3.4.2",
     "@nuxtjs/tailwindcss": "6.12.1",
+    "@plugin-web-update-notification/vite": "1.7.1",
     "@tailwindcss/forms": "0.5.7",
     "@vueuse/core": "10.11.0",
     "@vueuse/nuxt": "10.11.0",
